<resources>
    <string name="app_name">FYP_AC_Monitor</string>
    <string name="main_title">FYP AC Monitor</string>
    <string name="startButton_title">Start</string>

    <string name="loginButton_title">Login</string>
    <string name="username_input_title">Enter your username</string>
    <string name="password_input_titile">Enter your password</string>

    <string name="register_button">Register</string>

    <string name="nav_home_title">Home</string>
    <string name="nav_chart_title">Analysis</string>
    <string name="nav_control_title">Control</string>

    <string name="chart_fragment_title">Analysis</string>

    <string name="control_fragment_title">Control</string>
    <string name="control_fragment_power_switch_title">Power</string>
    <string name="control_fragment_temp_title">Temperature</string>
    <string name="control_fragment_fanspeed_title">Fanspeed</string>

    <string name="home_fragment_title">Home</string>
    <string name="home_fragment_feedback_very_cold">Very Cold</string>
    <string name="home_fragment_feedback_cold">Cold</string>
    <string name="home_fragment_feedback_a_bit_cold">A Bit Cold</string>
    <string name="home_fragment_feedback_comfy">Comfy</string>
    <string name="home_fragment_feedback_a_bit_hot">A Bit Hot</string>
    <string name="home_fragment_feedback_hot">Hot</string>
    <string name="home_fragment_feedback_very_hot">Very Hot</string>
    <string name="home_fragment_feedback_default">SELECT...</string>

</resources>
