<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/control_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/control_fragment_title"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/control_fragment_power_switch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_fragment_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/control_fragment_power_switch_title"
        android:textSize="24dp" />

    <Switch
        android:id="@+id/control_fragment_power_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/control_fragment_power_switch_title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="2.5dp"
        android:scaleX="1.5"
        android:scaleY="1.5" />

    <TextView
        android:id="@+id/control_fragment_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_fragment_power_switch"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:text="@string/control_fragment_temp_title"
        android:textSize="24dp" />

    <NumberPicker
        android:id="@+id/control_fragment_temp_picker"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_alignBottom="@+id/control_fragment_temp_title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="-40dp"
        android:scaleY="0.8"
        android:scaleX="0.8" />

    <TextView
        android:id="@+id/control_fragment_fanspeed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_fragment_temp_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:text="@string/control_fragment_fanspeed_title"
        android:textSize="24dp" />

    <NumberPicker
        android:id="@+id/control_fragment_fanspeed_picker"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_alignBottom="@+id/control_fragment_fanspeed_title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="-40dp"
        android:scaleY="0.8"
        android:scaleX="0.8" />


</RelativeLayout>